--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "cross-env": "^5.2.1",
         "eslint": "^5.16.0",
         "eslint-plugin-vue": "^5.2.3",
+        "feather-icons": "^4.28.0",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.15",
         "popper.js": "^1.16.0",
@@ -26,6 +27,7 @@
         "resolve-url-loader": "^2.3.2",
         "tailwindcss": "^1.2.0-canary.5",
         "vue": "^2.6.11",
+        "vue-feather-icons": "^5.1.0",
         "vue-meta": "^2.3.1",
         "vue-template-compiler": "^2.6.11"
     }
