--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,6 @@
     "license": "MIT",
     "require": {
         "php": "^7.3.0",
-        "ext-exif": "*",
-        "ext-gd": "*",
         "facade/ignition": "^2.3.6",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
@@ -26,6 +24,7 @@
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3",
         "reinink/remember-query-strings": "^0.1.0",
+        "spatie/laravel-permission": "^3.17",
         "tightenco/ziggy": "^0.8.0"
     },
     "config": {
