--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@inertiajs/progress": "^0.1.0",
         "cross-env": "^5.2.1",
         "eslint": "^5.16.0",
+        "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-vue": "^5.2.3",
         "feather-icons": "^4.28.0",
         "laravel-mix": "^5.0.1",
@@ -32,5 +33,8 @@
         "vue-i18n": "^8.22.2",
         "vue-meta": "^2.3.1",
         "vue-template-compiler": "^2.6.11"
+    },
+    "devDependencies": {
+        "eslint-config-prettier": "^6.15.0"
     }
 }
