--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "phpunit/phpunit": "^9.3",
         "reinink/remember-query-strings": "^0.1.0",
         "spatie/laravel-permission": "^3.17",
-        "tightenco/ziggy": "^0.8.0"
+        "tightenco/ziggy": "^0.8.0",
+        "ext-pdo_sqlite": "*"
     },
     "config": {
         "optimize-autoloader": true,
