--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,20 @@ volumes:
   mundolector_db:
 
 services:
+  nginx:
+    image: nginx:stable-alpine
+    ports:
+      - 8000:80
+    container_name: mundolector_nginx
+    volumes:
+      - ./:/var/www/html
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - php
+      - mysql
+    networks:
+      - laravel
+
   mysql:
     image: mysql:8
     container_name: mundolector_mysql
@@ -36,7 +50,7 @@ services:
     depends_on:
       - node
     ports:
-      - 8000:8000
+      - 9000
     networks:
       - laravel
   
