--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,7 @@ services:
     environment:
       TZ: America/Bogota
     volumes:
+      - /var/www/html/vendor
       - .:/var/www/html
     depends_on:
       - node
