--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
       context: .
       dockerfile: Dockerfile.php
     container_name: mundolector_php
+    user: 'www-data:www-data'
     environment:
       TZ: America/Bogota
     volumes:
