--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       TZ: America/Bogota
     volumes:
       - .:/var/www/html
+      - /var/www/html/vendor
     depends_on:
       - node
     ports:
