--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - 8000:80
     container_name: mundolector_nginx
     volumes:
-      - ./:/var/www/html
+      # - ./:/var/www/html
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php
@@ -46,7 +46,7 @@ services:
     environment:
       TZ: America/Bogota
     volumes:
-      - .:/var/www/html
+      # - .:/var/www/html
       - /var/www/html/vendor
     depends_on:
       - node
@@ -60,8 +60,8 @@ services:
       context: .
       dockerfile: Dockerfile.node
     restart: always
-    volumes:
-      - ./:/var/www/html
+    # volumes:
+    #   - ./:/var/www/html
     networks:
       - laravel
 
