chore: Refactor Dockerfile and Docker Compose configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,27 +21,10 @@ services:
     networks:
       - laravel
 
-  mysql:
-    image: mysql:8
-    container_name: mundolector_mysql
-    volumes:
-      - mundolector_db:/var/lib/mysql
-    ports:
-      - 3306
-    environment:
-      MYSQL_DATABASE: mundolector
-      TZ: America/Bogota
-      MYSQL_USER: mundolector
-      MYSQL_PASSWORD: mundolector
-      MYSQL_ROOT_PASSWORD: mundolector
-      SERVICE_NAME: mysql
-    networks:
-      - laravel
-
   php:
-    build: 
+    build:
       context: .
-      dockerfile: Dockerfile.php
+      dockerfile: Dockerfile
     container_name: mundolector_php
     environment:
       TZ: America/Bogota
@@ -49,28 +32,6 @@ services:
       - node
     ports:
       - 9000
-    networks:
-      - laravel
-  
-  node:
-    build:
-      context: .
-      dockerfile: Dockerfile.node
-    restart: always
-    networks:
-      - laravel
-
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    container_name: mundolector_phpmyadmin
-    environment:
-      PMA_HOST: mysql
-      MYSQL_ROOT_PASSWORD: mundolector
-      TZ: America/Bogota
-    ports:
-      - "2222:80"
-    depends_on:
-      - mysql
     networks:
       - laravel
 
