chore: Update Dockerfile and Docker Compose configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,9 +39,9 @@ services:
       - laravel
 
   php:
-    build: 
+    build:
       context: .
-      dockerfile: Dockerfile.php
+      dockerfile: Dockerfile
     container_name: mundolector_php
     environment:
       TZ: America/Bogota
