--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,10 @@ version: "3"
 networks:
   laravel:
 
+
 volumes:
   mundolector_db:
+
 
 services:
   nginx:
@@ -13,7 +15,7 @@ services:
       - 8000:80
     container_name: mundolector_nginx
     volumes:
-      -  /var/www/html
+      - .:/var/www/html
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php
@@ -39,16 +41,15 @@ services:
       - laravel
 
   php:
-    build: 
+    build:
       context: .
       dockerfile: Dockerfile.php
     container_name: mundolector_php
     environment:
       TZ: America/Bogota
     volumes:
-      - /var/www/html
+      - .:/var/www/html
     ports:
       - 9000
     networks:
       - laravel
-
