chore: Update Dockerfile and docker-compose.yml configurations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,7 @@ services:
       TZ: America/Bogota
     volumes:
       - .:/var/www/html
+      - /var/www/html/vendor
     ports:
       - 9000
     networks:
