--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,7 +1,8 @@
 version: "3"
+volumes:
+  mundolector_db:
 networks:
   dokploy-network:
-    external: true
 services:
   nginx:
     image: nginx:stable-alpine
@@ -13,18 +14,36 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php
+      - mysql
     networks:
       - dokploy-network
-
+  mysql:
+    image: mysql:8
+    container_name: mundolector_mysql
+    volumes:
+      - mundolector_db:/var/lib/mysql
+    ports:
+      - 3306
+    environment:
+      MYSQL_DATABASE: mundolector
+      TZ: America/Bogota
+      MYSQL_USER: mundolector
+      MYSQL_PASSWORD: mundolector
+      MYSQL_ROOT_PASSWORD: mundolector
+      SERVICE_NAME: mysql
+    networks:
+      - dokploy-network
   php:
     build:
       context: .
       dockerfile: Dockerfile
       args:
-        ENVIRONMENT: production
+        ENVIRONMENT: development
     container_name: mundolector_php
     environment:
       TZ: America/Bogota
+    depends_on:
+      - mysql
     volumes:
       - .:/var/www/html
     ports:
